templates/network-policy/denyCIDR-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyEgressCidr
metadata:
  name: deny-egress
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["NetworkPolicy"]
  parameters:
          cidr:
                  - "192.168.0.1/24"
