templates/network-policy/denyIngressLabel-constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDenyIngress
metadata:
  name: deny-ingress
spec:
  match:
    kinds:
      - apiGroups: ["networking.k8s.io"]
        kinds: ["NetworkPolicy"]
  parameters:
          label:
                  - "webserver"
